Fixed dropdown menu alignment

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav a {
 .dropdown-menu {
     display: none;
     position: relative;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
 }
 
 .bar1, .bar2, .bar3 {
@@ -152,6 +152,12 @@ p {
 
 #contact img:hover {
     transform: scale(1.2);
+}
+
+@media only screen and (min-width: 801px) {
+    .dropdown-content {
+        display: none;
+    }
 }
 
 @media only screen and (max-width:800px) {
